[FIX] website: can't scroll too long dropdown menu
Issue

	- Install "Website" module
	- Go to the website
	- Then Pages -> Edit Menu
	- Add at least 30 item under an one menu item then save

	When clicking on the menu, it is not possible to scroll to check
	last item in dropwdown menu.

Solution

	Add a maximum height of 60vh to the dropdown with a
	2nd level scroll.
	For mobile, let default height with no second level scroll.
	Since 13.0, it will also alter Mega Menu dropdown.

opw-2313014

X-original-commit: 01d92223d5b82dce83bf8c43c10b57c4b9193141

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -669,14 +669,6 @@ $-transition-duration: 200ms;
         transition: transform $-transition-duration;
     }
 
-    .navbar-collapse {
-        @if o-website-value('header-template') != 'logo_hamburger' {
-            max-height: 70vh;
-        }
-        &.show {
-            overflow-y: auto;
-        }
-    }
     &.o_header_is_scrolled {
         .navbar-brand {
             font-size: $o-theme-navbar-fixed-logo-height / $line-height-base;
@@ -737,6 +729,25 @@ $-transition-duration: 200ms;
 
 // Header templates
 header {
+    * .dropdown-menu {
+        max-height: 60vh;
+        @include media-breakpoint-down(sm) {
+            max-height: 100%;
+        }
+        &.show {
+            overflow-y: auto;
+        }
+    }
+
+    .navbar-collapse {
+        @if o-website-value('header-template') != 'logo_hamburger' {
+            max-height: 70vh;
+        }
+        &.show {
+            overflow-y: auto;
+        }
+    }
+
     &:not(.o_header_no_transition) {
         .navbar-brand {
             transition: font-size $-transition-duration, opacity $-transition-duration ease-out;
